reduca complejidad cognitica de metodo ed solictudes por rut